# qmshell

./: .gitignore  CMakeLists.txt  README.md  qmshell.pro  qmshell.qrc  update_version.sh
.github/workflows/: build_test.yml  release.yml
PKGBUILD/: PKGBUILD
data/: build_info.conf  qmshell.desktop
data/color_schemes/: Breeze.schema  Cleanslate.schema  DarkPastels.schema  Deepin.schema  Ivory.schema  Linux.schema  Matrixgreen.schema  Modern.schema  Monochrome.schema  Paperwhite.schema  Parchment.schema  Slate.schema  Solarized.schema  SolarizedLight.schema  Tango.schema  Ubuntu.schema
qml/: SettingsWindow.qml  TerminalView.qml  main.qml
src/: main.cpp  settingsmanager.cpp  settingsmanager.h  terminalbackend.cpp  terminalbackend.h  terminalcolor.cpp  terminalcolor.h
